fix : adjust scrolling functionality for publish event modal on IOS + testing publish event function on IOS!
